--- a/app/src/main/res/anim/slide_up.xml
+++ b/app/src/main/res/anim/slide_up.xml
@@ -3,14 +3,10 @@
     <translate
         android:duration="800"
         android:fromYDelta="100%p"
-        android:toYDelta="0"
-        />
+        android:toYDelta="0" />
 
     <alpha
+        android:duration="500"
         android:fromAlpha="0.0"
-        android:toAlpha="1.0"
-        android:duration="500"/>
-
-
-
+        android:toAlpha="1.0" />
 </set>
