--- a/app/src/main/res/values/mystrings.xml
+++ b/app/src/main/res/values/mystrings.xml
@@ -3,7 +3,7 @@
 
     <!--    mainfragment tags-->
     <string name="loadingUsers"></string>
-    <string name="emptyTags">No users found :(\nClick here to add tags\n</string>
-    <string name="noMoreUsers">No users found :(\nClick here to add tags\n </string>
+    <string name="emptyTags">No users found :(\nClick here to add tags</string>
+    <string name="noMoreUsers">No users found :(\nClick here to add tags </string>
 
 </resources>
