--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha android:fromAlpha="0.0"
-    android:toAlpha="1.0"
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="500"
+    android:fromAlpha="0.0"
     android:interpolator="@android:anim/accelerate_interpolator"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+    android:toAlpha="1.0" />
 
