--- a/app/src/main/res/anim/scale.xml
+++ b/app/src/main/res/anim/scale.xml
@@ -5,9 +5,8 @@
         android:duration="300"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
-        android:toXScale="0.0"
-        android:toYScale="0.0"
         android:pivotX="50%"
         android:pivotY="50%"
-        />
+        android:toXScale="0.0"
+        android:toYScale="0.0" />
 </set>
