--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -1,5 +1,5 @@
-<translate android:fromXDelta="0"
-    android:toXDelta="10"
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="1000"
+    android:fromXDelta="0"
     android:interpolator="@anim/cycle"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:toXDelta="10" />
