--- a/app/src/main/res/anim/user_profile_scale.xml
+++ b/app/src/main/res/anim/user_profile_scale.xml
@@ -5,9 +5,8 @@
         android:duration="300"
         android:fromXScale="0.0"
         android:fromYScale="0.0"
-        android:toXScale="1.0"
-        android:toYScale="1.0"
         android:pivotX="50%"
         android:pivotY="50%"
-        />
+        android:toXScale="1.0"
+        android:toYScale="1.0" />
 </set>
