--- a/app/src/main/res/drawable/ic_logo_google_white.xml
+++ b/app/src/main/res/drawable/ic_logo_google_white.xml
@@ -1,7 +1,10 @@
-<vector android:alpha="0.9" android:height="24dp"
-    android:viewportHeight="512" android:viewportWidth="512"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000"
-        android:pathData="m502.676,210.212c3.206,16.786 4.957,34.363 4.957,52.72c0.001,143.42 -97.989,245.412 -245.957,245.412c-141.557,0 -256.216,-112.351 -256.216,-251.058c0,-138.707 114.659,-251.058 256.216,-251.058c69.183,0 126.982,24.947 171.348,65.431l-72.233,70.771l0,-0.161c-26.898,-25.108 -61.004,-37.972 -99.114,-37.972c-84.548,0 -153.247,69.982 -153.247,152.836c0,82.837 68.698,152.988 153.247,152.988c76.706,0 128.905,-42.997 139.65,-101.992l-139.65,0l0,-97.915l240.999,0z"
-/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:alpha="0.9"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <path
+        android:fillColor="#000000"
+        android:pathData="m502.676,210.212c3.206,16.786 4.957,34.363 4.957,52.72c0.001,143.42 -97.989,245.412 -245.957,245.412c-141.557,0 -256.216,-112.351 -256.216,-251.058c0,-138.707 114.659,-251.058 256.216,-251.058c69.183,0 126.982,24.947 171.348,65.431l-72.233,70.771l0,-0.161c-26.898,-25.108 -61.004,-37.972 -99.114,-37.972c-84.548,0 -153.247,69.982 -153.247,152.836c0,82.837 68.698,152.988 153.247,152.988c76.706,0 128.905,-42.997 139.65,-101.992l-139.65,0l0,-97.915l240.999,0z" />
 </vector>
