--- a/app/src/main/res/drawable/ic_report.xml
+++ b/app/src/main/res/drawable/ic_report.xml
@@ -3,10 +3,10 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="m13,17l-2,0l0,-2l2,0l0,2zM13,13l-2,0l0,-6l2,0l0,6z"
-      android:fillColor="#4c4c4c"/>
-  <path
-      android:pathData="m12,4c4.4,0 8,3.6 8,8s-3.6,8 -8,8s-8,-3.6 -8,-8s3.6,-8 8,-8m0,-2c-5.5,0 -10,4.5 -10,10c0,5.5 4.5,10 10,10s10,-4.5 10,-10c0,-5.5 -4.5,-10 -10,-10l0,0z"
-      android:fillColor="#4c4c4c"/>
+    <path
+        android:fillColor="#4c4c4c"
+        android:pathData="m13,17l-2,0l0,-2l2,0l0,2zM13,13l-2,0l0,-6l2,0l0,6z" />
+    <path
+        android:fillColor="#4c4c4c"
+        android:pathData="m12,4c4.4,0 8,3.6 8,8s-3.6,8 -8,8s-8,-3.6 -8,-8s3.6,-8 8,-8m0,-2c-5.5,0 -10,4.5 -10,10c0,5.5 4.5,10 10,10s10,-4.5 10,-10c0,-5.5 -4.5,-10 -10,-10l0,0z" />
 </vector>
