--- a/app/src/main/res/drawable/ic_request_location.xml
+++ b/app/src/main/res/drawable/ic_request_location.xml
@@ -1,6 +1,13 @@
-<vector android:alpha="0.9" android:height="256dp"
-    android:viewportHeight="32" android:viewportWidth="32"
-    android:width="256dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#1a1a1a" android:pathData="M19.77,11.19A3.77,3.77 0,1 0,16 15,3.78 3.78,0 0,0 19.77,11.19ZM13.23,11.19A2.77,2.77 0,1 1,16 14,2.78 2.78,0 0,1 13.23,11.19Z"/>
-    <path android:fillColor="#1a1a1a" android:pathData="M19.91,21.43c2.26,-3.34 4.78,-7.63 4.78,-10.24a8.69,8.69 0,0 0,-17.38 0c0,2.61 2.52,6.9 4.78,10.24 -3.58,0.65 -5.85,2.13 -5.85,3.87 0,2.39 4.2,4.2 9.76,4.2s9.76,-1.81 9.76,-4.2C25.76,23.56 23.49,22.08 19.91,21.43ZM16,3.5a7.7,7.7 0,0 1,7.69 7.69c0,3.74 -6.07,11.84 -7.69,13.92C14.38,23 8.31,14.93 8.31,11.19A7.7,7.7 0,0 1,16 3.5ZM16,28.5c-5.16,0 -8.76,-1.69 -8.76,-3.2 0,-1.24 2.29,-2.46 5.48,-3 1.5,2.15 2.76,3.73 2.89,3.9a0.51,0.51 0,0 0,0.78 0c0.13,-0.17 1.39,-1.75 2.89,-3.9 3.19,0.5 5.48,1.72 5.48,3C24.76,26.81 21.16,28.5 16,28.5Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="256dp"
+    android:height="256dp"
+    android:alpha="0.9"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+    <path
+        android:fillColor="#1a1a1a"
+        android:pathData="M19.77,11.19A3.77,3.77 0,1 0,16 15,3.78 3.78,0 0,0 19.77,11.19ZM13.23,11.19A2.77,2.77 0,1 1,16 14,2.78 2.78,0 0,1 13.23,11.19Z" />
+    <path
+        android:fillColor="#1a1a1a"
+        android:pathData="M19.91,21.43c2.26,-3.34 4.78,-7.63 4.78,-10.24a8.69,8.69 0,0 0,-17.38 0c0,2.61 2.52,6.9 4.78,10.24 -3.58,0.65 -5.85,2.13 -5.85,3.87 0,2.39 4.2,4.2 9.76,4.2s9.76,-1.81 9.76,-4.2C25.76,23.56 23.49,22.08 19.91,21.43ZM16,3.5a7.7,7.7 0,0 1,7.69 7.69c0,3.74 -6.07,11.84 -7.69,13.92C14.38,23 8.31,14.93 8.31,11.19A7.7,7.7 0,0 1,16 3.5ZM16,28.5c-5.16,0 -8.76,-1.69 -8.76,-3.2 0,-1.24 2.29,-2.46 5.48,-3 1.5,2.15 2.76,3.73 2.89,3.9a0.51,0.51 0,0 0,0.78 0c0.13,-0.17 1.39,-1.75 2.89,-3.9 3.19,0.5 5.48,1.72 5.48,3C24.76,26.81 21.16,28.5 16,28.5Z" />
 </vector>
