--- a/app/src/main/res/drawable/view_message_edit_text.xml
+++ b/app/src/main/res/drawable/view_message_edit_text.xml
@@ -8,9 +8,9 @@
             <solid android:color="#EEE6E6E6" />
             <corners
                 android:bottomLeftRadius="20sp"
+                android:bottomRightRadius="20sp"
                 android:topLeftRadius="20sp"
-                android:topRightRadius="20sp"
-                android:bottomRightRadius="20sp"/>
+                android:topRightRadius="20sp" />
         </shape>
     </item>
 </ripple>
