--- a/app/src/main/res/drawable/view_other_chat.xml
+++ b/app/src/main/res/drawable/view_other_chat.xml
@@ -8,9 +8,9 @@
             <solid android:color="#EECACACA" />
             <corners
                 android:bottomLeftRadius="5sp"
+                android:bottomRightRadius="20sp"
                 android:topLeftRadius="20sp"
-                android:topRightRadius="20sp"
-                android:bottomRightRadius="20sp"/>
+                android:topRightRadius="20sp" />
         </shape>
     </item>
 </ripple>
