--- a/app/src/main/res/drawable/view_pop_up_matched.xml
+++ b/app/src/main/res/drawable/view_pop_up_matched.xml
@@ -2,11 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#eeffffff"
+        android:angle="90"
         android:endColor="#FFFFFF"
-        android:angle="90"/>
+        android:startColor="#eeffffff" />
 
-    <corners
-        android:radius="25sp"/>
+    <corners android:radius="25sp" />
 
 </shape>
