--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -62,12 +62,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17sp"
+        android:paddingStart="21sp"
         android:paddingLeft="21sp"
+        android:paddingEnd="10sp"
         android:paddingRight="10sp"
         android:scaleX="1.25"
         android:scaleY="1.25"
-        android:src="@drawable/ic_back_arrow"
-        android:paddingEnd="10sp"
-        android:paddingStart="21sp" />
+        android:src="@drawable/ic_back_arrow" />
 
 </RelativeLayout>
