--- a/app/src/main/res/layout/fragment_registration_email.xml
+++ b/app/src/main/res/layout/fragment_registration_email.xml
@@ -3,11 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.pinder.app.RegistrationEmailFragment">
-
-
 
 
     <TextView
@@ -111,6 +108,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/view_rounded_button"
-        android:text="Register">
-    </Button>
+        android:text="Register"></Button>
 </LinearLayout>
