--- a/app/src/main/res/layout/fragment_registration_phone.xml
+++ b/app/src/main/res/layout/fragment_registration_phone.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrationPhoneFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".RegistrationPhoneFragment">
 
     <TextView
         android:layout_width="wrap_content"
