--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="top"
@@ -10,8 +11,7 @@
     android:paddingLeft="10sp"
     android:paddingTop="10sp"
     android:paddingRight="10sp"
-    android:paddingBottom="88sp"
-    android:id="@+id/item_card">
+    android:paddingBottom="88sp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -20,7 +20,6 @@
         android:layout_gravity="center"
         android:elevation="2dp"
         app:cardCornerRadius="10dp">
-
 
 
         <LinearLayout
@@ -42,11 +41,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:gravity="center_vertical|left"
+                android:paddingStart="20sp"
+                android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
                 android:textSize="30sp"
-                tools:text="name"
-                android:paddingLeft="20sp"
-                android:paddingStart="20sp" />
+                tools:text="name" />
 
             <TextView
                 android:id="@+id/tags"
