--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -11,8 +11,8 @@
         android:id="@+id/MatchImage"
         android:layout_width="55sp"
         android:layout_height="55sp"
-        app:srcCompat="@drawable/ic_profile_hq"
-        app:civ_border_width="3dp" />
+        app:civ_border_width="3dp"
+        app:srcCompat="@drawable/ic_profile_hq" />
 
     <LinearLayout
         android:layout_width="wrap_content"
