--- a/app/src/main/res/layout/item_tags.xml
+++ b/app/src/main/res/layout/item_tags.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_tags"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp"
-    android:id="@+id/item_tags">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/myTags"
