--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,8 +14,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" >
-        </action>
+            app:popExitAnim="@anim/slide_out_right"></action>
         <argument android:name="matchId" />
         <argument android:name="matchName" />
         <argument android:name="matchImageUrl" />
@@ -23,12 +22,12 @@
         <action
             android:id="@+id/action_chatFragment_to_navigation3"
             app:destination="@id/navigation3"
-            app:popUpTo="@id/navigation3"
-            app:popUpToInclusive="true"
             app:enterAnim="@anim/slide_in_up"
             app:exitAnim="@anim/slide_out_down"
             app:popEnterAnim="@anim/slide_in_down"
-            app:popExitAnim="@anim/slide_out_up"/>
+            app:popExitAnim="@anim/slide_out_up"
+            app:popUpTo="@id/navigation3"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/userProfileFragment"
@@ -42,13 +41,12 @@
             app:popEnterAnim="@anim/slide_in_down"
             app:popExitAnim="@anim/slide_out_up"
             app:popUpTo="@id/mainFragmentManager"
-            app:popUpToInclusive="true" >
-            <argument
-                android:name="fromUsersProfilesActivity"/>
+            app:popUpToInclusive="true">
+            <argument android:name="fromUsersProfilesActivity" />
         </action>
         <argument android:name="userId" />
-<!--        <argument android:name="user"-->
-<!--            app:argType="com.pinder.app.models.Card"/>-->
+        <!--        <argument android:name="user"-->
+        <!--            app:argType="com.pinder.app.models.Card"/>-->
 
     </fragment>
     <fragment
@@ -75,7 +73,8 @@
         <argument android:name="matchImageUrl" />
         <argument android:name="fromActivity" />
     </fragment>
-    <navigation android:id="@+id/navigation3"
+    <navigation
+        android:id="@+id/navigation3"
         app:startDestination="@id/mainFragmentManager">
         <fragment
             android:id="@+id/mainFragment"
@@ -116,8 +115,7 @@
                 app:destination="@id/mainFragment" />
             <argument android:name="fromUsersProfilesActivity" />
         </fragment>
-        <argument
-            android:name="fromUsersProfilesActivity"/>
+        <argument android:name="fromUsersProfilesActivity" />
     </navigation>
 </navigation>
 
